stderr.log
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def wsgi.py(environ, start_response):
            ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def wsgi.py(environ, start_response):
            ^
SyntaxError: invalid syntax
[UID:2704][3423762] Child process with pid: 3423770 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def wsgi.py(environ, start_response):
            ^
SyntaxError: invalid syntax
[UID:2704][3423762] Child process with pid: 3423811 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 8
    def wsgi.py(environ, start_response):
            ^
SyntaxError: invalid syntax
[UID:2704][3423762] Child process with pid: 3423852 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 8, in <module>
    wsgi = imp.load_source('wsgi', 'app.py')
  File "app.py", line 1, in <module>
    from flask import Flask
ImportError: No module named flask
[UID:2704][3423762] Child process with pid: 3426648 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 1, in <module>
    import importlib.util
ImportError: No module named util
[UID:2704][3423762] Child process with pid: 3429382 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 1, in <module>
    import importlib.util
ImportError: No module named util
[UID:2704][3423762] Child process with pid: 3429434 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 1, in <module>
    import importlib.util
ImportError: No module named util
[UID:2704][3423762] Child process with pid: 3430147 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 1, in <module>
    import importlib.util
ImportError: No module named util
[UID:2704][3423762] Child process with pid: 3430148 was killed by signal: 15, core dump: 0
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f016d7de740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007ff9417d3740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007fb642ec3740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f276eb32740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007fa2464ce740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007fb27e4f3740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f9682231740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f5992ec1740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007ff0bfc35740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007fb996467740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f4791fc6740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f598afcf740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f8aa7306740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f33a3941740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007fc805a38740 (most recent call first):
Fatal Python error: initfsencoding: unable to load the file system codec
ModuleNotFoundError: No module named 'encodings'

Current thread 0x00007f45d870d740 (most recent call first):
[UID:2704][3512592] Child process with pid: 3512612 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 11, in <module>
    spec.loader.exec_module(app_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "app.py", line 1, in <module>
    from flask import Flask
ModuleNotFoundError: No module named 'flask'
[UID:2704][3557512] Child process with pid: 3557521 was killed by signal: 15, core dump: 0
[UID:2704][3557512] Child process with pid: 3557740 was killed by signal: 15, core dump: 0
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 11, in <module>
    spec.loader.exec_module(app_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "app.py", line 1, in <module>
    from flask import Flask
ModuleNotFoundError: No module named 'flask'
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 11, in <module>
    spec.loader.exec_module(app_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "app.py", line 1, in <module>
    from flask import Flask
ModuleNotFoundError: No module named 'flask'
Traceback (most recent call last):
  File "/home/wwwproject20thir/2030portal/passenger_wsgi.py", line 11, in <module>
    spec.loader.exec_module(app_module)
  File "<frozen importlib._bootstrap_external>", line 728, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "app.py", line 1, in <module>
    from flask import Flask
ModuleNotFoundError: No module named 'flask'
